# tradigitools

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SConstruct  tradigitools.mod
cinema4d/: README_C4D
cinema4d/tradigiTOOLs/: tradigiTOOLs.pyp
cinema4d/tradigiTOOLs/res/: c4d_symbols.bak  c4d_symbols.h
cinema4d/tradigiTOOLs/res/dialogs/: TRADIGITOOLS_DIALOG.res
cinema4d/tradigiTOOLs/res/strings_us/dialogs/: TRADIGITOOLS_DIALOG.str
cmake/: FindMaya.cmake
maya/: ANIMTools.cpp  ANIMToolsUI.cpp  ANIMToolsUI.h  AboutCommand.cpp  AboutCommand.h  Breakdown.cpp  Breakdown.h  BreakdownCommand.cpp  BreakdownCommand.h  BreakdownList.cpp  BreakdownList.h  CMakeLists.txt  CurveCleanerCommand.cpp  CurveCleanerCommand.h  ErrorReporting.h  IncrementalSaveCommand.cpp  IncrementalSaveCommand.h  RetimingCommand.cpp  RetimingCommand.h  SConscript  SConstruct  SetKeyCommand.cpp  SetKeyCommand.h  ShotMaskCommand.cpp  ShotMaskCommand.h  cie_tradigitools_2013.mel  config.h.in  readme-1.3a.rtf
maya/scripts/: cie_tradigitools.mel
maya/source/: SConscript
